--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.0-alpha1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
